# url-shortener

./: .Dockerfile  .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-2f7b4d777de691073894e2fa4a0114e1d46adcae415a150805eb8f950d2a65c2.json  query-378001cb7800eb91bc057ec7931758926103d14097a5806fe3b69ee96b5b4483.json  query-3a904c9dfe54c4607a65a7130d8cc3dd63bcb69e4a58c45a53e5947e66128819.json  query-3b0d5f1704310fb85cb207ccef3f81709e7dbc054b2613841939a695adf903a9.json
migrations/: 20250514080211_init.sql
src/: main.rs
src/db/: redis.rs  sqlite.rs
src/handlers/: mod.rs  redirect.rs  shorten.rs  stats.rs  stats_page.rs
src/models/: mod.rs
src/routes/: mod.rs  redirect.rs  shorten.rs  stats.rs  stats_page.rs
src/templates/: stats.rs
templates/: stats.html
