[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
] }
dotenv = "0.15"
askama = "0.12.0"
redis = {version = "0.25", features = ["tokio-comp", "connection-manager"]}